# SDLPlatformer

./: CMakeLists.txt  Makefile
include/: Entity.hpp  Math.hpp  RenderWindow.hpp  Utils.hpp
src/: Entity.cpp  Math.cpp  RenderWindow.cpp  main.cpp
